--- a/resume.html
+++ b/resume.html
@@ -68,13 +68,14 @@
                         <li>Java</li>
                         <li>C</li>
                         <li>Adobe Photoshop</li>
-                        <li>Git</li>
+                        <li>Git and GitHud</li>
                     </ul>
                     <p class="accent-second-header">[COMPETENT] </p>
                     <ul>
                         <li>Python</li>
                         <li>Ruby on Rails</li>
                         <li>Go</li>
+                        <li>Android Studio</li>
                     </ul>
                 </div>
             </section>
