--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,9 @@
         </nav>
         <article>
             <section>
+                <h2 class="portfolio-section-header">Where else to find me:</h2>
+
+                    <p style="margin-left: auto; margin-right: auto; width: 95%">Thank you for visiting my website! Heres all the places to contact me: </p>
                 <div class="section">
                     <h2 class="section-header">Email </h2>
                     <p>My Email is <a href="mailto:jtaetle@gatech.edu">jtaetle@gatech.edu</a>. Please email for any business inquiries!</p>
