--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,19 @@
                     <img src="media/eugieawardauthorcardscarroll.jpg" class='portfolio-media'/>
                     <p style="margin-bottom: 10px; margin-top: 10px"><a href="https://www.youtube.com/watch?v=bahOebqUTkg&feature=emb_title" class="accent-second-header">Click here to Watch The Eugie Award Program 2020</a></p>
                 </div>
+                <div class="section">
+                    <h2 class="section-header">Fair Fight U at Georgia Tech's Instagram Posts</h2>
+                    <p>Started by Stacey Abrams, Fair Fight promotes free and fair elections in Georgia and around the country by advocating for election reform at all levels, encourages voter participation in elections, and educate voters about elections and their voting rights. A new development in this organization is Fair Fight U, which is now a club at every major university on campus promoting voting to the student population. I have created a few instagram posts for this organization. All posts are in Georgia Tech's official color scheme, to indicate the information is intended for Georgia Tech students.</p>
+                    <h3 class="portfolio-media-header">Key Dates for the 2020 General Election in Georgia:</h3>
+                    <img src="media/FFKeyDates.jpg" class='portfolio-media'/>
+                    <p> For this post, I wanted to limit all the information about key dates to one picture, so that an Instagram user could easily repost it to their instagram story and educate their followers on key dates for the election. In terms of content, I organized the dates in bullets, and made the final bullet a different color than the rest to emphasize its importance. I wanted to include information about absentee ballots because it is important but isnt a date, so I included it in smaller text at the bottom. Finally, I added the yellow accent shape on the right to make it more visual appealing and more likely to get an Instagram user's attention.</p>
+                    <h3 class="portfolio-media-header">Requesting an Absentee Ballot: </h3>
+                    <img src="media/FFpage1.jpg" class='portfolio-media' style="width: 40%"/>
+                    <img src="media/FFpage2.jpg" class='portfolio-media' lass='portfolio-media' style="width: 40%"/>
+                    <img src="media/FFpage3.jpg" class='portfolio-media' lass='portfolio-media' style="width: 40%"/>
+                    <img src="media/FFpage4.jpg" class='portfolio-media' lass='portfolio-media' style="width: 40%"/>
+                    <p>For this post, I wanted the first picture to capture the user's eye and clearly state the purpose of the post because I knew all of the information about requesting an absentee ballot would not fit onto one picture. For the second, third, and fourth pictures in the post I wanted to include screenshots from the website official voting website to clearly walk a person through the process. Furthermore, I added key information for specfically requesting an absentee ballot to the Georgia Tech campus because I knew my audience for this post is located there.</p>
+                </div>
             </section>
         </article>
     </body>
